# langchain-tutorials

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  README.md  ROADMAP.md  chatterpy_requirements.txt  datawaeve_requirements.txt  mypy.ini  pyproject.toml  requirements.txt  tokenizer.py
docs/: ~$LangChain.pptx
lesson-1/: .env_sample  README.md  huggingfaces.py  llama_cpp.py  myllama_cpp.py  myollama.py  myopenai.py  ollama.py  watsonx.py
lesson-10/: README.md
lesson-10/src/: README.md  chatterpy_app.py  chatterpy_gui.py  config.yaml  config.yml  datawaeve_app.py  datawaeve_cli.py  myconfig.yml  test.py
lesson-11/: README.md
lesson-11/src/: README.md  chatterpy_app.py  chatterpy_gui.py  config.yml  datawaeve_app.py
lesson-12/: README.md
lesson-12/src/: README.md  chatterpy_app.py  config.yaml
lesson-2/: .env_sample  README.md  config.yaml  config.yml  main.py
lesson-2/config/: huggingfaces_config.yml  llamacpp_config.yml  ollama_config.yml  openai_config.yml  watsonx_config.yml
lesson-2/core/: __init__.py  config.py
lesson-2/protocols/: ollama_protocol.py  openai_protocol.py  protocol.py  (+2 more)
lesson-3/: .env_openai_sample  .env_sample  .env_watsonx_sample  README.md  chatbot.py  chatbot_history.py  chatterpy.py  config.yaml  config.yml  prompt.py  prompt_template.py
lesson-4/: README.md  chatbot.py  chatterpy.py  config.yaml  config.yml
lesson-5/: README.md  chatbot.py  chatterpy.py  config.yml
lesson-6/: README.md
lesson-7/: README.md
lesson-8/: README.md
lesson-9/: README.md
tokenizer/: .env-sample  embedding.py  tokenizer.py
(+218 files in other folders)
