[project]
authors = [
  {name = "Salvatore D'Angelo", email = "sasadangelo@gmail.com"},
]
dependencies = [
  "langchain-community==0.4.1",
  "torch==2.9.1",
  "ibm_watsonx_ai==1.4.11",
  "langchain-ibm==1.0.2",
  "pypdf==6.5.0",
  "Wikipedia-API==0.8.1",
  "langchain-ollama==1.0.1",
  "qdrant-client==1.16.2",
  "langchain-qdrant==1.1.0",
  "streamlit==1.52.2",
  "python-dotenv==1.2.1",
  "langchain-openai==1.1.6",
  "llama_cpp_python==0.3.16", # "sse-starlette==2.1.3",  # "starlette-context==0.4.0",
  "pydantic-settings==2.12.0",
  "fastapi==0.128.0",
]
description = "Tutorials and experiments with LangChain and various LLM providers"
keywords = ["python", "langchain", "llm", "chatbot", "AI"]
name = "langchain-tutorials"
readme = "README.md"
requires-python = ">=3.11,<3.13"
version = "0.1.0"

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "black>=23.12.1",
  "coverage>=7.11.0",
  "detect-secrets>=1.5.0",
  "flake8>=6.1.0",
  "isort>=5.13.2",
  "mypy>=1.18.2",
  "poethepoet>=0.37.0",
  "pre-commit>=3.8.0",
  "pytest>=8.4.2",
  "radon>=6.0.1",
]

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3
profile = "black"
skip = [".venv", "__pycache__", "build", "dist"]

[tool.flake8]
exclude = [".venv"]
extend-ignore = ["E203", "W503"]
max-line-length = 120

[tool.black]
exclude = '''
/(
    \.venv
  | build
  | dist
  | __pycache__
)/
'''
include = '\.pyi?$'
line-length = 120
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["src"]
